[package]
name = "melba"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.13"
tokio = {version = "1.44.1", features = ["full"]}
sqlx = {version = "0.7.4", features = ["runtime-async-std-native-tls","postgres", "migrate", "chrono"]}
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
linkify = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
clap = {version = "4.5.32", features = ["color", "derive"]}
colorize = "0.1.0"
thiserror = "1.0.69"
config = "0.14.1"
once_cell = "1.21.1"
sentry = "0.34.0"
prometheus = {version = "0.13.4", features = ["push"]}
log = "0.4.26"
env_logger = "0.11.7"

[lib]
path = "src/lib.rs"

[[bin]]
name = "melba"
path = "src/main.rs"

[dev-dependencies]
mockito = "1.7.0"
